--- a/_posts/2024-02-23-datetime.md
+++ b/_posts/2024-02-23-datetime.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: How to Effectively Display Dates and Times on the Web with JavaScript
+title: Use JavaScript to Format Dates and Times for the Web
 category: JavaScript
 ---
 
@@ -81,7 +81,7 @@ and deliver HTML that looks something like this:
 
 As front-end devs, we‘ll write JavaScript that scans the page text for
 these date stamps, and then replaces them with an unambiguous format
-customized and optimized for each site visitor.
+customized for each site visitor.
 
 ### Add an event listener
 
@@ -162,7 +162,7 @@ function localDateString(dateTime) {
 This function
 
 * Receives the datetime-formatted string
-* Parses it into a Date object
+* Parses it into a `Date` object
 * Creates a default localized string from the object
 * Returns the localized string
 
@@ -175,7 +175,7 @@ placeholder, though, and improve it later.
 Since our back-end dev did not identify the datestamps with mark-up,
 we’re going to be scanning text for a datetime pattern. Scanning text
 for patterns can be a problem because the text we’re hoping to match
-comes mixed among an enourmous variety of words and character
+comes mixed among an enormous variety of words and character
 constructions. Some people, when confronted with such a problem, think
 “I know, I’ll use regular expressions.”[^2] Which is exactly what we’re
 going to do:
@@ -317,7 +317,7 @@ child.textContent
 
 Now we’ll split the string into an array of strings. We’ll split the
 string on the pattern of the datetime string we’re looking for. The
-JavaScript split method takes either a string or a regular expression.
+JavaScript `split` method takes either a string or a regular expression.
 In typical use, these separators are discarded:
 
 ```javascript
