--- a/_posts/2024-02-23-datetime.md
+++ b/_posts/2024-02-23-datetime.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: Use JavaScript to Format Dates and Times for the Web
+title: Use JavaScript to Format Dates and Times on the Web
 category: JavaScript
 ---
 
